# delivery_encoder

./: .gitignore  Cargo.toml  README.md
assets/: Thumbs.db  instrukce.md  krutart.rgba
src/: app.rs  encoding.rs  main.rs  models.rs  utils.rs
