[package]
name = "delivery_encoder"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.0"
egui = "0.27.0"
rfd = "0.14.1"
anyhow = "1.0.86"
tempfile = "3.10.1"
fs2 = "0.4.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }
